--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,6 @@
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "~bulma";
 @import "~sweetalert2/src/sweetalert2";
